force-app/main/default/objects/CB_Credit_Note__c/fields/Available_Amount__c.field-meta.xml
<CustomField>
    <fullName>Available_Amount__c</fullName>
    <description>Remaining available amount</description>
    <inlineHelpText>Remaining available amount</inlineHelpText>
    <label>Available Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>