force-app/main/default/objects/CB_Credit_Note__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact associated with this credit note</description>
    <inlineHelpText>Contact associated with this credit note</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CB Credit Notes</relationshipLabel>
    <relationshipName>CB_Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>