force-app/main/default/objects/CB_Credit_Note__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <description>Credit note is generated from this Invoice</description>
    <inlineHelpText>Credit note is generated from this Invoice</inlineHelpText>
    <label>CB Invoice</label>
    <referenceTo>CB_Invoice__c</referenceTo>
    <relationshipLabel>CB Credit Notes</relationshipLabel>
    <relationshipName>CB_Credit_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>