force-app/main/default/objects/CB_Credit_Note__c/fields/Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Issued_Date__c</fullName>
    <description>Credit note issued date</description>
    <inlineHelpText>Credit note issued date</inlineHelpText>
    <label>Issued Date</label>
    <type>DateTime</type>
</CustomField>