force-app/main/default/objects/CB_Credit_Note__c/fields/Price_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Type__c</fullName>
    <description>Is tax inclusive or exclusive?</description>
    <inlineHelpText>Is tax inclusive or exclusive?</inlineHelpText>
    <label>Price Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>