force-app/main/default/objects/CB_Credit_Note__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <description>Reason - why this credit note generated?</description>
    <inlineHelpText>Reason - why this credit note generated?</inlineHelpText>
    <label>Reason</label>
    <length>150</length>
    <type>Text</type>
</CustomField>