force-app/main/default/objects/CB_Credit_Note__c/fields/Refunded_At__c.field-meta.xml
<CustomField>
    <fullName>Refunded_At__c</fullName>
    <description>Credit note refunded date</description>
    <inlineHelpText>Credit note refunded date</inlineHelpText>
    <label>Refunded At</label>
    <type>DateTime</type>
</CustomField>