force-app/main/default/objects/CB_Credit_Note__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Credit note type</description>
    <label>Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>